tests/Fixture/Annotation/Route/Invalid/SourceNotValid/SourceNotValid.php
<?php declare(strict_types=1);

namespace Sunrise\Http\Router\Tests\Fixture\Annotation\Route\Invalid;

/**
 * @Route(
 *   name="home",
 *   path="/",
 *   methods={"GET"}
 * )
 */
class SourceNotValid
{
}
